removing unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@
 /public/assets
 .byebug_history
 
+/.idea
+/config/database.yml
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
