Adding database.yml in git ignore

--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -20,15 +20,15 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  
+
 
 development:
   <<: *default
   database: photo_crud_development
   host: localhost
   port: 5432
-  username: postgres
-  password: postgres
+  username:
+  password:
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -65,8 +65,8 @@ test:
   database: photo_crud_test
   host: localhost
   port: 5432
-  username: postgres
-  password: postgres
+  username:
+  password:
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
