--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -27,8 +27,8 @@ development:
   database: photo_crud_development
   host: localhost
   port: 5432
-  username:
-  password:
+  username: your postgres username
+  password: post postgres password
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
